--- a/extension-filter-express/package.json
+++ b/extension-filter-express/package.json
@@ -5,7 +5,8 @@
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "nodemon src/index.ts"
    },
    "author": "",
    "license": "ISC",
@@ -19,6 +20,7 @@
    },
    "devDependencies": {
       "@types/node": "^24.0.3",
+      "nodemon": "^3.1.10",
       "ts-node": "^10.9.2",
       "typescript": "^5.8.2"
    }
