--- a/extension-filter-express/package.json
+++ b/extension-filter-express/package.json
@@ -12,6 +12,7 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "cors": "^2.8.5",
       "express": "^5.1.0",
       "pg": "^8.14.1",
       "reflect-metadata": "^0.2.2",
