--- a/extension-filter-express/package.json
+++ b/extension-filter-express/package.json
@@ -4,15 +4,16 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/index.ts",
+      "start": "ts-node start-prod.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "dev": "nodemon src/index.ts"
+      "dev": "nodemon start-dev.ts"
    },
    "author": "",
    "license": "ISC",
    "description": "",
    "dependencies": {
       "cors": "^2.8.5",
+      "dotenv": "^16.5.0",
       "express": "^5.1.0",
       "pg": "^8.14.1",
       "reflect-metadata": "^0.2.2",
