--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
 version: '3'
 services:
   extension-filter-postgres:
-    build: ./extension-filter-postgres
-    image: extension-filter-postgres:1.0.0-compose
+    image: yooputer/extension-filter:postgres
     volumes:
       - extension-filter-volume:/var/lib/postgresql/data
     restart: always
 
   extension-filter-express:
-    build: ./extension-filter-express
-    image: extension-filter-express:1.0.0-compose
+    image: yooputer/extension-filter:express
     depends_on:
       - extension-filter-postgres
     restart: on-failure
 
   extension-filter-front:
-    build: ./extension-filter-nextjs
-    image: extension-filter-nextjs:1.0.0-compose
+    image: yooputer/extension-filter:front
     ports:
       - 80:3000
     depends_on:
