--- a/extension-filter-postgres/Dockerfile
+++ b/extension-filter-postgres/Dockerfile
@@ -1,10 +1,10 @@
-FROM postgres:13
+FROM postgres:13-alpine
 
-#계정정보 설정
-ENV POSTGRES_USER=yoojin
-ENV POSTGRES_PASSWORD=password
-ENV POSTGRES_DB=extension-filter
-ENV TZ=Asia/Seoul
+# 계정정보 설정
+ENV POSTGRES_USER=yoojin \
+    POSTGRES_PASSWORD=password \
+    POSTGRES_DB=extension-filter \
+    TZ=Asia/Seoul
 
 EXPOSE 5432
 
