--- a/extension-filter-nextjs/package.json
+++ b/extension-filter-nextjs/package.json
@@ -14,7 +14,8 @@
     "env-cmd": "^10.1.0",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
